Fix - content alignment for two column slide and basic block

--- a/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/content/_content.scss
@@ -5,10 +5,10 @@
   @extend %max-width;
   margin-bottom: em(50);
   margin-top: em(60);
+  width: 70%;
 
   p {
     font-size: em(18);
-    width: 70%;
   }
 
 }
@@ -24,6 +24,10 @@ hr {
   h2 {
     @extend %h2;
     margin-bottom: em(15);
+  }
+
+  h3 {
+    font-family: $oswald;
   }
 
 }
