--- a/web/themes/custom/hm-public-theme/static/sass/shared/_slides.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/shared/_slides.scss
@@ -45,7 +45,7 @@
   .carousel__caption {
     padding-bottom: em(70);
     padding-top: em(70);
-    right: 30px;
+    //right: 30px;
   }
 
 }
